add_subdirectory(ASCI_Purple)
add_subdirectory(ASC_Sequoia)
add_subdirectory(BitBench)
add_subdirectory(Fhourstones)
add_subdirectory(Fhourstones-3.1)
add_subdirectory(FreeBench)

if(NOT DEFINED STEENSGAARD_AGNOSTIC_ENABLED)
  # JLC: Steensgaard with agnotic encoding leads to test failure
  add_subdirectory(MallocBench)
endif()

add_subdirectory(McCat)
add_subdirectory(NPB-serial)
add_subdirectory(Olden)
add_subdirectory(Prolangs-C)
add_subdirectory(Ptrdist)
add_subdirectory(SciMark2-C)
add_subdirectory(Trimaran)
add_subdirectory(VersaBench)
add_subdirectory(llubenchmark)
add_subdirectory(mediabench)
add_subdirectory(nbench)
add_subdirectory(sim)
add_subdirectory(Rodinia)

if((NOT "${TARGET_OS}" STREQUAL "Darwin") OR (NOT "${ARCH}" STREQUAL "ARM"))
  add_subdirectory(TSVC)
endif()
# C++ benchmarks
#add_subdirectory(Prolangs-C++)
#add_subdirectory(Bullet)
#add_subdirectory(tramp3d-v4)
if(NOT "${ARCH}" STREQUAL "Hexagon")
#  add_subdirectory(DOE-ProxyApps-C++)
  add_subdirectory(DOE-ProxyApps-C)
  add_subdirectory(MiBench)
endif()
if(NOT "${ARCH}" STREQUAL "XCore")
  # invoke is not supported.
  #add_subdirectory(7zip)
  #add_subdirectory(PAQ8p)
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  add_subdirectory(mafft)
endif()
