#add_subdirectory(Adobe-C++)
add_subdirectory(BenchmarkGame)
# invoke is not supported.
#add_subdirectory(CoyoteBench)
# JLC generated executable never finishes
#add_subdirectory(Dhrystone)
add_subdirectory(Linpack)
add_subdirectory(McGill)
add_subdirectory(Misc)
#add_subdirectory(Misc-C++)
#add_subdirectory(Misc-C++-EH)
add_subdirectory(Polybench)
add_subdirectory(Shootout)
#add_subdirectory(Shootout-C++)
# C++ benchmark
#add_subdirectory(SmallPT)
add_subdirectory(Stanford)
